--- a/CSS/Project1/index.html
+++ b/CSS/Project1/index.html
@@ -5,8 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS´s Project 1</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Learning CSS</h1>
+<!-- <h1 class="cat" id="dog">Thrust</h1>
+    <h1 class="cat" id="mouse">Drag</h1>
+    <h1 class="cat" id="bird">Lift</h1>
+    <h1 class="cat" id="horse">Weight</h1> -->
+<!-- Now the parent is div instead of body -->
+    <!-- <div id="imageX"><img src="assets/computer-code.jpeg" style="border:5px solid red;" id="image1"></div>
+    <div>
+    <p id="p1" class="changeFont">Thrust is a force that moves an aircraft in the direction of the motion.</p>
+    <p id="p2" class="changeFont">Drag is the force that acts opposite to the direction of motion.</p>
+    <p id="p3" class="changeFont">Lift is the force that holds an airplane in the air.</p>
+    <p id="p4" class="changeFont">Weight is the force caused by gravity.</p>
+    </div> -->
+<!-- Task #12 -->
+    <div class="escalonado">
+     <div style="height: 300px" ><h2 class="t12" id="h21">Turboprop Aircraft.</h2></div>
+     <br>
+     <div style="height: 200px"><h2 class="t12" id="h22">Piston Aircraft.</h2></div>
+     <br>
+     <div style="height: 100px"><h2 class="t12" id="h23">Light, Mid-size and Jumbo Jets.</h2></div>
+    </div>
+<!-- Task #12.2 -->
+<div class="escalonado2">
+    <div class="div-img" id="div-turbo"><img src="assets/Turboprop Aircraft.jpeg" class="img-escalonado" id="Turbo"></div> 
+    <br>
+    <div class="div-img" id="div-piston"><img src="assets/Piston Aircraft.jpeg" class="img-escalonado" id="Piston"></div>
+    <br>
+    <div class="div-img" id="div-jets"><img src="assets/Jets Aircraft.jpeg" class="img-escalonado" id="Jets"></div>
+   </div>
+
 </body>
 </html>
